# faster-whisper2

./: .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/: evaluate_yt_commons.py  memory_benchmark.py
faster_whisper/: feature_extractor.py  tokenizer.py  transcribe.py  utils.py  vad.py
guides/: USAGE_GUIDE.md
tests/: test_model_selection.py  test_transcribe.py
